--- a/gk.bib
+++ b/gk.bib
@@ -30313,3 +30313,12 @@
   year={2010},
   publisher={Oxford university press}
 }
+@misc{mcdonnell2016neuronal,
+  title={Neuronal stochastic variability: influences on spiking dynamics and network activity},
+  author={McDonnell, Mark D and Goldwyn, Joshua H and Lindner, Benjamin},
+  journal={Frontiers in computational neuroscience},
+  volume={10},
+  pages={38},
+  year={2016},
+  publisher={Frontiers Media SA}
+}
