--- a/gk.bib
+++ b/gk.bib
@@ -30120,7 +30120,7 @@
   publisher = {Inter-university Consortium for Political and Social Research [distributor]},
   title     = {Elmira Community Study},
   doi       = {10.3886/ICPSR07200.v1},
-  year      = {1948 (2006)}
+  year      = {{1948 (2006})}
 }
 @article{kahneman1991anomalies,
   title     = {Anomalies: The endowment effect, loss aversion, and status quo bias},
