--- a/gk.bib
+++ b/gk.bib
@@ -13394,7 +13394,7 @@
 @article{KnaArrMen06,
   author  = {Felicia Marie Knaul, H{\'e}ctor Arreola-Ornelas,
              Oscar M{\'e}ndez-Carniado, Chloe Bryson-Cahn, Jeremy
-             Barofsky, Rachel Maguire, Martha Miranda,},
+             Barofsky, Rachel Maguire, Martha Miranda},
   title   = {Evidence is good for your health system: policy
              reform to remedy catastrophic and impoverishing
              health spending in Mexico},
