--- a/gk.bib
+++ b/gk.bib
@@ -30298,27 +30298,33 @@
   publisher =    {University of Chicago Press Chicago, IL}
 }
 @article{girardeau2022my,
-  title={Where is my mind…? The link between mind wandering and prospective memory},
-  author={Girardeau, Jean-Charles and Sperduti, Marco and Blond{\'e}, Philippe and Piolino, Pascale},
-  journal={Brain sciences},
-  volume={12},
-  number={9},
-  pages={1139},
-  year={2022},
-  publisher={MDPI}
+  title =        {Where is my mind…? The link between mind wandering
+                  and prospective memory},
+  author =       {Girardeau, Jean-Charles and Sperduti, Marco and
+                  Blond{\'e}, Philippe and Piolino, Pascale},
+  journal =      {Brain sciences},
+  volume =       {12},
+  number =       {9},
+  pages =        {1139},
+  year =         {2022},
+  publisher =    {MDPI}
 }
 @book{rolls2010noisy,
-  title={The noisy brain: stochastic dynamics as a principle of brain function},
-  author={Rolls, Edmund T and Deco, Gustavo},
-  year={2010},
-  publisher={Oxford university press}
+  title =        {The noisy brain: stochastic dynamics as a principle
+                  of brain function},
+  author =       {Rolls, Edmund T and Deco, Gustavo},
+  year =         {2010},
+  publisher =    {Oxford university press}
 }
 @misc{mcdonnell2016neuronal,
-  title={Neuronal stochastic variability: influences on spiking dynamics and network activity},
-  author={McDonnell, Mark D and Goldwyn, Joshua H and Lindner, Benjamin},
-  journal={Frontiers in computational neuroscience},
-  volume={10},
-  pages={38},
-  year={2016},
-  publisher={Frontiers Media SA}
+  title =        {Neuronal stochastic variability: influences on
+                  spiking dynamics and network activity},
+  author =       {McDonnell, Mark D and Goldwyn, Joshua H and Lindner,
+                  Benjamin},
+  journal =      {Frontiers in computational neuroscience},
+  volume =       {10},
+  pages =        {38},
+  year =         {2016},
+  publisher =    {Frontiers Media SA}
 }
+
