--- a/gk.bib
+++ b/gk.bib
@@ -30117,7 +30117,7 @@
 }
 @book{LazBerMcP48,
   author    = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
-  publisher = {Inter-university Consortium for Political and Social Research [distributor]},
+  publisher = {ICPSR [distributor]},
   title     = {Elmira Community Study},
   doi       = {10.3886/ICPSR07200.v1},
   year      = {{1948 (2006)}}
