--- a/gk.bib
+++ b/gk.bib
@@ -30116,11 +30116,13 @@
   publisher = {Annual Reviews}
 }
 @book{LazBerMcP48,
-  author    = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
-  publisher = {ICPSR [distributor]},
-  title     = {Elmira Community Study},
-  doi       = {10.3886/ICPSR07200.v1},
-  year      = {{1948 (2006)}}
+  author =       {Lazarsfeld, Paul F. and Berelson, Bernard R., and
+                  McPhee, William N.},
+  publisher =    {ICPSR [distributor]},
+  title =        {Elmira Community Study},
+  doi =          {10.3886/ICPSR07200.v1},
+  year =         1948,
+  date =         2006
 }
 @article{kahneman1991anomalies,
   title     = {Anomalies: The endowment effect, loss aversion, and status quo bias},
