--- a/gk.bib
+++ b/gk.bib
@@ -30116,13 +30116,11 @@
   publisher = {Annual Reviews}
 }
 @book{LazBerMcP48,
-  author =       {Lazarsfeld, Paul F. and Berelson, Bernard R., and
-                  McPhee, William N.},
-  publisher =    {ICPSR [distributor]},
-  title =        {Elmira Community Study},
-  doi =          {10.3886/ICPSR07200.v1},
-  year =         1948,
-  date =         2006
+  author    = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
+  publisher = {ICPSR [distributor]},
+  title     = {Elmira Community Study},
+  doi       = {10.3886/ICPSR07200.v1},
+  year      = {{1948 (2006)}}
 }
 @article{kahneman1991anomalies,
   title     = {Anomalies: The endowment effect, loss aversion, and status quo bias},
@@ -30329,4 +30327,13 @@
   year =         {2016},
   publisher =    {Frontiers Media SA}
 }
-
+@article{groves2010total,
+  title={Total survey error: Past, present, and future},
+  author={Groves, Robert M and Lyberg, Lars},
+  journal={Public opinion quarterly},
+  volume={74},
+  number={5},
+  pages={849--879},
+  year={2010},
+  publisher={Oxford University Press}
+}
