--- a/gk.bib
+++ b/gk.bib
@@ -30298,7 +30298,7 @@
   publisher =    {University of Chicago Press Chicago, IL}
 }
 @article{girardeau2022my,
-  title =        {Where is my mind…? The link between mind wandering
+  title =        {Where is my mind\dots? The link between mind wandering
                   and prospective memory},
   author =       {Girardeau, Jean-Charles and Sperduti, Marco and
                   Blond{\'e}, Philippe and Piolino, Pascale},
@@ -30337,3 +30337,32 @@
   year={2010},
   publisher={Oxford University Press}
 }
+@article{vanderweele2011controlled,
+  title={Controlled direct and mediated effects: definition, identification and bounds},
+  author={VanderWeele, Tyler J},
+  journal={Scandinavian Journal of Statistics},
+  volume={38},
+  number={3},
+  pages={551--563},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+@article{acharya2016explaining,
+  title={Explaining causal findings without bias: Detecting and assessing direct effects},
+  author={Acharya, Avidit and Blackwell, Matthew and Sen, Maya},
+  journal={American Political Science Review},
+  volume={110},
+  number={3},
+  pages={512--529},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+@Article{DosHocSuh24,
+  author =       {Meredith Dost and Jennifer Hochschild and Elizabeth
+                  Suhay},
+  title =        {Evaluating Societal Use of New Technologies: The
+                  Promise of Public Consultation via Surveys},
+  journal =      { },
+  year =         2024
+}
+
