--- a/gk.bib
+++ b/gk.bib
@@ -30366,3 +30366,15 @@
   year =         2024
 }
 
+
+@article{EriPal00,
+title = {Equilibria in Campaign Spending Games: Theory and Data},
+author = {Erikson, Robert S. and Palfrey, Thomas R.},
+year = {2000},
+journal = {American Political Science Review},
+volume = {94},
+number = {3},
+pages = {595-609}
+}
+
+
