--- a/gk.bib
+++ b/gk.bib
@@ -30377,4 +30377,54 @@ number = {3},
 pages = {595-609}
 }
 
-
+@article{lazer2018science,
+  title={The science of fake news},
+  author={Lazer, David MJ and Baum, Matthew A and Benkler, Yochai and Berinsky, Adam J and Greenhill, Kelly M and Menczer, Filippo and Metzger, Miriam J and Nyhan, Brendan and Pennycook, Gordon and Rothschild, David and others},
+  journal={Science},
+  volume={359},
+  number={6380},
+  pages={1094--1096},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+@book{woolley2018computational,
+  title={Computational propaganda: Political parties, politicians, and political manipulation on social media},
+  author={Woolley, Samuel C and Howard, Philip N},
+  year={2018},
+  publisher={Oxford University Press}
+}
+@article{kouzy2020coronavirus,
+  title={Coronavirus goes viral: quantifying the COVID-19 misinformation epidemic on Twitter},
+  author={Kouzy, Ramez and Abi Jaoude, Joseph and Kraitem, Afif and El Alam, Molly B and Karam, Basil and Adib, Elio and Zarka, Jabra and Traboulsi, Cindy and Akl, Elie W and Baddour, Khalil},
+  journal={Cureus},
+  volume={12},
+  number={3},
+  year={2020},
+  publisher={Cureus}
+}
+@article{berinsky2023political,
+  title={Political Rumors: Why We Accept Misinformation and How to Fight It},
+  author={Berinsky, Adam J},
+  year={2023},
+  publisher={Princeton University Press}
+}
+@article{pennycook2021psychology,
+  title={The psychology of fake news},
+  author={Pennycook, Gordon and Rand, David G},
+  journal={Trends in cognitive sciences},
+  volume={25},
+  number={5},
+  pages={388--402},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{gaozhao2021flagging,
+  title={Flagging fake news on social media: An experimental study of media consumers' identification of fake news},
+  author={Gaozhao, Dongfang},
+  journal={Government Information Quarterly},
+  volume={38},
+  number={3},
+  pages={101591},
+  year={2021},
+  publisher={Elsevier}
+}
