--- a/gk.bib
+++ b/gk.bib
@@ -30428,3 +30428,12 @@ pages = {595-609}
   year={2021},
   publisher={Elsevier}
 }
+@article{barrera2020facts,
+  title={Facts, alternative facts, and fact checking in times of post-truth politics},
+  author={Barrera, Oscar and Guriev, Sergei and Henry, Emeric and Zhuravskaya, Ekaterina},
+  journal={Journal of public economics},
+  volume={182},
+  pages={104123},
+  year={2020},
+  publisher={Elsevier}
+}
