--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2807,3 +2807,13 @@
   url    = {GaryKing.org/acc},
   year   = {2024}
 }
+@article{king2017news,
+  title={How the news media activate public expression and influence national agendas},
+  author={King, Gary and Schneer, Benjamin and White, Ariel},
+  journal={Science},
+  volume={358},
+  number={6364},
+  pages={776--780},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
