--- a/gk.bib
+++ b/gk.bib
@@ -30437,3 +30437,23 @@ pages = {595-609}
   year={2020},
   publisher={Elsevier}
 }
+@article{guess2020exposure,
+  title={Exposure to untrustworthy websites in the 2016 US election},
+  author={Guess, Andrew M and Nyhan, Brendan and Reifler, Jason},
+  journal={Nature human behaviour},
+  volume={4},
+  number={5},
+  pages={472--480},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+@article{vosoughi2018spread,
+  title={The spread of true and false news online},
+  author={Vosoughi, Soroush and Roy, Deb and Aral, Sinan},
+  journal={science},
+  volume={359},
+  number={6380},
+  pages={1146--1151},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
