--- a/gk.bib
+++ b/gk.bib
@@ -30457,3 +30457,53 @@ pages = {595-609}
   year={2018},
   publisher={American Association for the Advancement of Science}
 }
+@article{carrieri2019vaccine,
+  title={Vaccine hesitancy and (fake) news: Quasi-experimental evidence from Italy},
+  author={Carrieri, Vincenzo and Madio, Leonardo and Principe, Francesco},
+  journal={Health economics},
+  volume={28},
+  number={11},
+  pages={1377--1382},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+@article{freeman2022coronavirus,
+  title={Coronavirus conspiracy beliefs, mistrust, and compliance with government guidelines in England},
+  author={Freeman, Daniel and Waite, Felicity and Rosebrock, Laina and Petit, Ariane and Causier, Chiara and East, Anna and Jenner, Lucy and Teale, Ashley-Louise and Carr, Lydia and Mulhall, Sophie and others},
+  journal={Psychological medicine},
+  volume={52},
+  number={2},
+  pages={251--263},
+  year={2022},
+  publisher={Cambridge University Press}
+}
+@article{loomba2021measuring,
+  title={Measuring the impact of COVID-19 vaccine misinformation on vaccination intent in the UK and USA},
+  author={Loomba, Sahil and De Figueiredo, Alexandre and Piatek, Simon J and De Graaf, Kristen and Larson, Heidi J},
+  journal={Nature human behaviour},
+  volume={5},
+  number={3},
+  pages={337--348},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+@article{stachofsky2023measuring,
+  title={Measuring the effect of political alignment, platforms, and fake news consumption on voter concern for election processes},
+  author={Stachofsky, Julia and Schaupp, Ludwig Christian and Crossler, Robert E},
+  journal={Government Information Quarterly},
+  volume={40},
+  number={3},
+  pages={101810},
+  year={2023},
+  publisher={Elsevier}
+}
+@article{treen2020online,
+  title={Online misinformation about climate change},
+  author={Treen, Kathie M d'I and Williams, Hywel TP and O'Neill, Saffron J},
+  journal={Wiley Interdisciplinary Reviews: Climate Change},
+  volume={11},
+  number={5},
+  pages={e665},
+  year={2020},
+  publisher={Wiley Online Library}
+}
