--- a/gk.bib
+++ b/gk.bib
@@ -30507,3 +30507,89 @@ pages = {595-609}
   year={2020},
   publisher={Wiley Online Library}
 }
+@article{altay2023misinformation,
+  title={Misinformation on misinformation: Conceptual and methodological challenges},
+  author={Altay, Sacha and Berriche, Manon and Acerbi, Alberto},
+  journal={Social media+ society},
+  volume={9},
+  number={1},
+  pages={20563051221150412},
+  year={2023},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@misc{van2023we,
+  title={We need a gold standard for randomised control trials studying misinformation and vaccine hesitancy on social media},
+  author={van der Linden, Sander},
+  journal={bmj},
+  volume={381},
+  year={2023},
+  publisher={British Medical Journal Publishing Group}
+}
+@article{AllWatRan24,
+author = {Jennifer Allen  and Duncan J. Watts  and David G. Rand },
+title = {Quantifying the impact of misinformation and vaccine-skeptical content on Facebook},
+journal = {Science},
+volume = {384},
+number = {6699},
+pages = {eadk3451},
+year = {2024},
+doi = {10.1126/science.adk3451},
+}
+@book{pickard2019democracy,
+  title={Democracy without journalism?: Confronting the misinformation society},
+  author={Pickard, Victor},
+  year={2019},
+  publisher={Oxford University Press}
+}
+@article{watts2017don,
+  title={Don’t blame the election on fake news. Blame it on the media},
+  author={Watts, Duncan J and Rothschild, David M},
+  journal={Columbia Journalism Review},
+  volume={5},
+  pages={67--84},
+  year={2017}
+}
+@article{schudson2001objectivity,
+  title={The objectivity norm in American journalism},
+  author={Schudson, Michael},
+  journal={Journalism},
+  volume={2},
+  number={2},
+  pages={149--170},
+  year={2001},
+  publisher={Sage Publications London, Thousand Oaks, CA and New Delhi}
+}
+@incollection{klein2019news,
+  title={News editing and the editorial process},
+  author={Klein, Tim and Fondren, Elisabeth and Apcar, Leonard M},
+  booktitle={Oxford Research Encyclopedia of Communication},
+  year={2019}
+}
+@article{forsberg2022peer,
+  title={Peer review in academia},
+  author={Forsberg, Eva and Geschwind, Lars and Levander, Sara and Wermke, Wieland},
+  journal={Peer review in an Era of Evaluation: Understanding the Practice of Gatekeeping in Academia},
+  pages={3--36},
+  year={2022},
+  publisher={Springer International Publishing}
+}
+@article{bachmann2022defining,
+  title={Defining and measuring news media quality: Comparing the content perspective and the audience perspective},
+  author={Bachmann, Philipp and Eisenegger, Mark and Ingenhoff, Diana},
+  journal={The International Journal of Press/Politics},
+  volume={27},
+  number={1},
+  pages={9--37},
+  year={2022},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@incollection{puglisi2015empirical,
+  title={Empirical studies of media bias},
+  author={Puglisi, Riccardo and Snyder Jr, James M},
+  booktitle={Handbook of media economics},
+  volume={1},
+  pages={647--667},
+  year={2015},
+  publisher={Elsevier}
+}
+
