--- a/gk.bib
+++ b/gk.bib
@@ -30592,4 +30592,9 @@ doi = {10.1126/science.adk3451},
   year={2015},
   publisher={Elsevier}
 }
-
+@article{porlezza2019accuracy,
+  title={Accuracy in journalism},
+  author={Porlezza, Colin},
+  year={2019},
+  publisher={Oxford University Press}
+}
