--- a/gk.bib
+++ b/gk.bib
@@ -30598,3 +30598,23 @@ doi = {10.1126/science.adk3451},
   year={2019},
   publisher={Oxford University Press}
 }
+@article{bauer2021believing,
+  title={Believing and sharing information by fake sources: An experiment},
+  author={Bauer, Paul C and Clemm von Hohenberg, Bernhard},
+  journal={Political Communication},
+  volume={38},
+  number={6},
+  pages={647--671},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+@article{thaler2024fake,
+  title={The fake news effect: Experimentally identifying motivated reasoning using trust in news},
+  author={Thaler, Michael},
+  journal={American Economic Journal: Microeconomics},
+  volume={16},
+  number={2},
+  pages={1--38},
+  year={2024},
+  publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
