--- a/gk.bib
+++ b/gk.bib
@@ -30618,4 +30618,10 @@ doi = {10.1126/science.adk3451},
   year={2024},
   publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
 }
-
+@inproceedings{zeng2020bad,
+  title={Bad news: Clickbait and deceptive ads on news and misinformation websites},
+  author={Zeng, Eric and Kohno, Tadayoshi and Roesner, Franziska},
+  booktitle={Workshop on Technology and Consumer Protection},
+  pages={1--11},
+  year={2020}
+}
