--- a/gk.bib
+++ b/gk.bib
@@ -30625,3 +30625,11 @@ doi = {10.1126/science.adk3451},
   pages={1--11},
   year={2020}
 }
+@article{ham2022using,
+ title={Using machine learning to test causal hypotheses in conjoint analysis},
+ author={Ham, Dae Woong and Imai, Kosuke and Janson, Lucas},
+ journal={Political Analysis},
+ pages={1--16},
+ year={2022},
+ publisher={Cambridge University Press}
+}
