--- a/gk.bib
+++ b/gk.bib
@@ -30633,3 +30633,26 @@ doi = {10.1126/science.adk3451},
  year={2022},
  publisher={Cambridge University Press}
 }
+@book{muhlmann2010journalism,
+  title={Journalism for democracy},
+  author={Muhlmann, G{\'e}raldine},
+  year={2010},
+  publisher={Polity}
+}
+@article{vehkoo2010quality,
+  title={What is quality journalism and how it can be saved},
+  author={Vehkoo, Johanna},
+  journal={Reuters Institute for the Study of Journalism},
+  pages={1--76},
+  year={2010}
+}
+@article{costera2016valuable,
+  title={Valuable journalism: Measuring news quality from a user’s perspective},
+  author={Costera Meijer, Irene and Bijleveld, Hildebrand P},
+  journal={Journalism studies},
+  volume={17},
+  number={7},
+  pages={827--839},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
