--- a/gk.bib
+++ b/gk.bib
@@ -30656,3 +30656,13 @@ doi = {10.1126/science.adk3451},
   year={2016},
   publisher={Taylor \& Francis}
 }
+@article{wojdynski2016native,
+  title =        {Native advertising: Engagement, deception, and
+                  implications for theory},
+  author =       {Wojdynski, Bartosz W},
+  journal =      {The new advertising: Branding, content and consumer
+                  relationships in a data-driven social media era},
+  pages =        {203--236},
+  year =         {2016},
+  publisher =    {Santa Barbara, CA: Praeger/ABC Clio}
+}
