--- a/gk.bib
+++ b/gk.bib
@@ -30585,7 +30585,7 @@ doi = {10.1126/science.adk3451},
 }
 @incollection{puglisi2015empirical,
   title={Empirical studies of media bias},
-  author={Puglisi, Riccardo and Snyder Jr, James M},
+  author={Puglisi, Riccardo and Snyder, James M},
   booktitle={Handbook of media economics},
   volume={1},
   pages={647--667},
