--- a/gk.bib
+++ b/gk.bib
@@ -30666,3 +30666,111 @@ doi = {10.1126/science.adk3451},
   year =         {2016},
   publisher =    {Santa Barbara, CA: Praeger/ABC Clio}
 }
+@article{hopkins2019muted,
+  title={The muted consequences of correct information about immigration},
+  author={Hopkins, Daniel J and Sides, John and Citrin, Jack},
+  journal={The Journal of Politics},
+  volume={81},
+  number={1},
+  pages={315--320},
+  year={2019},
+  publisher={University of Chicago Press Chicago, IL}
+}
+@article{ansolabehere1999replicating,
+  title={Replicating experiments using aggregate and survey data: The case of negative advertising and turnout},
+  author={Ansolabehere, Stephen D and Iyengar, Shanto and Simon, Adam},
+  journal={American political science Review},
+  volume={93},
+  number={4},
+  pages={901--909},
+  year={1999},
+  publisher={Cambridge University Press}
+}
+@article{barabas2010survey,
+  title={Are survey experiments externally valid?},
+  author={Barabas, Jason and Jerit, Jennifer},
+  journal={American Political Science Review},
+  volume={104},
+  number={2},
+  pages={226--242},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+@article{barnes2018making,
+  title={Making austerity popular: The media and mass attitudes toward fiscal policy},
+  author={Barnes, Lucy and Hicks, Timothy},
+  journal={American Journal of Political Science},
+  volume={62},
+  number={2},
+  pages={340--354},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+@article{brader2008triggers,
+  title={What triggers public opposition to immigration? Anxiety, group cues, and immigration threat},
+  author={Brader, Ted and Valentino, Nicholas A and Suhay, Elizabeth},
+  journal={American Journal of Political Science},
+  volume={52},
+  number={4},
+  pages={959--978},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{culpepper2024banklash,
+  title={Banklash: How media coverage of bank scandals moves mass preferences on financial regulation},
+  author={Culpepper, Pepper D and Jung, Jae-Hee and Lee, Taeku},
+  journal={American Journal of Political Science},
+  volume={68},
+  number={2},
+  pages={427--444},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+@article{wood2019elusive,
+  title={The elusive backfire effect: Mass attitudes’ steadfast factual adherence},
+  author={Wood, Thomas and Porter, Ethan},
+  journal={Political Behavior},
+  volume={41},
+  pages={135--163},
+  year={2019},
+  publisher={Springer}
+}
+@article{gerber2009does,
+  title={Does the media matter? A field experiment measuring the effect of newspapers on voting behavior and political opinions},
+  author={Gerber, Alan S and Karlan, Dean and Bergan, Daniel},
+  journal={American Economic Journal: Applied Economics},
+  volume={1},
+  number={2},
+  pages={35--52},
+  year={2009},
+  publisher={American Economic Association}
+}
+@article{djourelova2023persuasion,
+  title={Persuasion through slanted language: Evidence from the media coverage of immigration},
+  author={Djourelova, Milena},
+  journal={American economic review},
+  volume={113},
+  number={3},
+  pages={800--835},
+  year={2023},
+  publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203}
+}
+@article{reeves2016s,
+  title={‘It's The Sun Wot Won It’: Evidence of media influence on political attitudes and voting from a UK quasi-natural experiment},
+  author={Reeves, Aaron and McKee, Martin and Stuckler, David},
+  journal={Social science research},
+  volume={56},
+  pages={44--57},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{ladd2009exploiting,
+  title={Exploiting a rare communication shift to document the persuasive power of the news media},
+  author={Ladd, Jonathan McDonald and Lenz, Gabriel S},
+  journal={American Journal of Political Science},
+  volume={53},
+  number={2},
+  pages={394--410},
+  year={2009},
+  publisher={Wiley Online Library}
+}
