--- a/gk.bib
+++ b/gk.bib
@@ -30774,3 +30774,33 @@ doi = {10.1126/science.adk3451},
   year={2009},
   publisher={Wiley Online Library}
 }
+@article{martin2017bias,
+  title={Bias in cable news: Persuasion and polarization},
+  author={Martin, Gregory J and Yurukoglu, Ali},
+  journal={American Economic Review},
+  volume={107},
+  number={9},
+  pages={2565--2599},
+  year={2017},
+  publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203}
+}
+@article{broockman2017causal,
+  title={The causal effects of elite position-taking on voter attitudes: Field experiments with elite communication},
+  author={Broockman, David E and Butler, Daniel M},
+  journal={American Journal of Political Science},
+  volume={61},
+  number={1},
+  pages={208--221},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+@article{henry2022checking,
+  title={Checking and sharing alt-facts},
+  author={Henry, Emeric and Zhuravskaya, Ekaterina and Guriev, Sergei},
+  journal={American Economic Journal: Economic Policy},
+  volume={14},
+  number={3},
+  pages={55--86},
+  year={2022},
+  publisher={American Economic Association}
+}
