--- a/gk.bib
+++ b/gk.bib
@@ -30804,3 +30804,81 @@ doi = {10.1126/science.adk3451},
   year={2022},
   publisher={American Economic Association}
 }
+@incollection{balint2023s,
+  title={“It's in the Air”—Sponsored Editorial Content as a Path for Stealth Government Propaganda: The Case of Israeli Media},
+  author={Balint, Anat},
+  booktitle={Sponsored Editorial Content in Digital Journalism},
+  pages={88--109},
+  year={2023},
+  publisher={Routledge}
+}
+@article{carlson2015news,
+  title={When news sites go native: Redefining the advertising--editorial divide in response to native advertising},
+  author={Carlson, Matt},
+  journal={Journalism},
+  volume={16},
+  number={7},
+  pages={849--865},
+  year={2015},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+@article{cooper2004money,
+  title={Money well spent? An experimental investigation of the effects of advertorials on citizen opinion},
+  author={Cooper, Christopher A and Nownes, Anthony J},
+  journal={American Politics Research},
+  volume={32},
+  number={5},
+  pages={546--569},
+  year={2004},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+@article{van2016effects,
+  title={Effects of disclosing sponsored content in blogs: How the use of resistance strategies mediates effects on persuasion},
+  author={Van Reijmersdal, Eva A and Fransen, Marieke L and Van Noort, Guda and Opree, Suzanna J and Vandeberg, Lisa and Reusch, Sanne and Van Lieshout, Floor and Boerman, Sophie C},
+  journal={American Behavioral Scientist},
+  volume={60},
+  number={12},
+  pages={1458--1474},
+  year={2016},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{colliander2015blog,
+  title={The blog and the bountiful: Exploring the effects of disguised product placement on blogs that are revealed by a third party},
+  author={Colliander, Jonas and Erlandsson, Susanna},
+  journal={Journal of Marketing Communications},
+  volume={21},
+  number={2},
+  pages={110--124},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+@article{campbell2013can,
+  title={Can disclosures lead consumers to resist covert persuasion? The important roles of disclosure timing and type of response},
+  author={Campbell, Margaret C and Mohr, Gina S and Verlegh, Peeter WJ},
+  journal={Journal of Consumer Psychology},
+  volume={23},
+  number={4},
+  pages={483--495},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{wojdynski2016going,
+  title={Going native: Effects of disclosure position and language on the recognition and evaluation of online native advertising},
+  author={Wojdynski, Bartosz W and Evans, Nathaniel J},
+  journal={Journal of Advertising},
+  volume={45},
+  number={2},
+  pages={157--168},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+@article{buvar2024you,
+  title={Do You Care to Share? The Negative Effect of Sponsored Content on the Behavioral Engagement with a Social Media Post Containing a COVID-19 Message},
+  author={Buv{\'a}r, {\'A}gnes and Balogh, Eszter and Dobai, Attila Marceli{\'a}n and Tess{\'e}nyi, Judit},
+  journal={Journal of Interactive Advertising},
+  volume={24},
+  number={2},
+  pages={143--155},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
