--- a/gk.bib
+++ b/gk.bib
@@ -30882,3 +30882,22 @@ doi = {10.1126/science.adk3451},
   year={2024},
   publisher={Taylor \& Francis}
 }
+@article{barrera2020facts,
+  title={Facts, alternative facts, and fact checking in times of post-truth politics},
+  author={Barrera, Oscar and Guriev, Sergei and Henry, Emeric and Zhuravskaya, Ekaterina},
+  journal={Journal of public economics},
+  volume={182},
+  pages={104123},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{henry2022checking,
+  title={Checking and sharing alt-facts},
+  author={Henry, Emeric and Zhuravskaya, Ekaterina and Guriev, Sergei},
+  journal={American Economic Journal: Economic Policy},
+  volume={14},
+  number={3},
+  pages={55--86},
+  year={2022},
+  publisher={American Economic Association}
+}
