--- a/gk.bib
+++ b/gk.bib
@@ -30882,3 +30882,67 @@ doi = {10.1126/science.adk3451},
   year={2022},
   publisher={American Economic Association}
 }
+@article{stiglitz2024journalism,
+  title={Journalism for development: the role of journalism promoting democracy and political accountability and sustainable development},
+  author={Stiglitz, Joseph E and Schiffrin, Anya and Groves, Dylan W},
+  year={2024},
+  publisher={UNESCO}
+}
+@article{larreguy2020publicising,
+  title={Publicising malfeasance: when the local media structure facilitates electoral accountability in Mexico},
+  author={Larreguy, Horacio and Marshall, John and Snyder Jr, James M},
+  journal={The Economic Journal},
+  volume={130},
+  number={631},
+  pages={2291--2327},
+  year={2020},
+  publisher={Oxford University Press}
+}
+@article{banerjee2024public,
+  title={Public information is an incentive for politicians: Experimental evidence from Delhi elections},
+  author={Banerjee, Abhijit and Enevoldsen, Nils and Pande, Rohini and Walton, Michael},
+  journal={American Economic Journal: Applied Economics},
+  volume={16},
+  number={3},
+  pages={323--353},
+  year={2024},
+  publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
+@article{snyder2010press,
+  title={Press coverage and political accountability},
+  author={Snyder Jr, James M and Str{\"o}mberg, David},
+  journal={Journal of political Economy},
+  volume={118},
+  number={2},
+  pages={355--408},
+  year={2010},
+  publisher={The University of Chicago Press}
+}
+@article{cage2016long,
+  title={The long-term effects of the printing press in sub-Saharan Africa},
+  author={Cag{\'e}, Julia and Rueda, Valeria},
+  journal={American Economic Journal: Applied Economics},
+  volume={8},
+  number={3},
+  pages={69--99},
+  year={2016},
+  publisher={American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
+@article{hayes2015local,
+  title={As local news goes, so goes citizen engagement: Media, knowledge, and participation in US House Elections},
+  author={Hayes, Danny and Lawless, Jennifer L},
+  journal={The Journal of Politics},
+  volume={77},
+  number={2},
+  pages={447--462},
+  year={2015},
+  publisher={University of Chicago Press Chicago, IL}
+}
+@incollection{gentzkow2006rise,
+  title={The rise of the fourth estate. How newspapers became informative and why it mattered},
+  author={Gentzkow, Matthew and Glaeser, Edward L and Goldin, Claudia},
+  booktitle={Corruption and reform: Lessons from America's economic history},
+  pages={187--230},
+  year={2006},
+  publisher={University of Chicago Press}
+}
