--- a/gk.bib
+++ b/gk.bib
@@ -30946,3 +30946,23 @@ doi = {10.1126/science.adk3451},
   year={2006},
   publisher={University of Chicago Press}
 }
+@article{feehan2021estimating,
+  title={Estimating adult death rates from sibling histories: A network approach},
+  author={Feehan, Dennis M and Borges, Gabriel M},
+  journal={Demography},
+  volume={58},
+  number={4},
+  pages={1525--1546},
+  year={2021},
+  publisher={Duke University Press}
+}
+@article{feehan2017network,
+  title={The network survival method for estimating adult mortality: Evidence from a survey experiment in Rwanda},
+  author={Feehan, Dennis M and Mahy, Mary and Salganik, Matthew J},
+  journal={Demography},
+  volume={54},
+  number={4},
+  pages={1503--1528},
+  year={2017},
+  publisher={Duke University Press}
+}
