--- a/gk.bib
+++ b/gk.bib
@@ -30966,3 +30966,10 @@ doi = {10.1126/science.adk3451},
   year={2017},
   publisher={Duke University Press}
 }
+@article{guriev2023curtailing,
+  title =        {Curtailing false news, amplifying truth},
+  author =       {Guriev, Sergei and Henry, Emeric and Marquis,
+                  Th{\'e}o and Zhuravskaya, Ekaterina},
+  doi =          {https://dx.doi.org/10.2139/ssrn.4616553},
+  year =         {2023}
+}
