--- a/gk.bib
+++ b/gk.bib
@@ -30973,3 +30973,9 @@ doi = {10.1126/science.adk3451},
   doi =          {https://dx.doi.org/10.2139/ssrn.4616553},
   year =         {2023}
 }
+@techreport{bouton2022small,
+  title={Small campaign donors},
+  author={Bouton, Laurent and Cag{\'e}, Julia and Dewitte, Edgard and Pons, Vincent},
+  year={2022},
+  institution={National Bureau of Economic Research}
+}
