--- a/gk.bib
+++ b/gk.bib
@@ -30979,3 +30979,13 @@ doi = {10.1126/science.adk3451},
   year={2022},
   institution={National Bureau of Economic Research}
 }
+@article{osborne1992preoccupational,
+  title={The preoccupational hazards of social life.},
+  author={Osborne, Randall E and Gilber, Daniel T},
+  journal={Journal of Personality and Social Psychology},
+  volume={62},
+  number={2},
+  pages={219},
+  year={1992},
+  publisher={American Psychological Association}
+}
