--- a/gk.bib
+++ b/gk.bib
@@ -30989,3 +30989,23 @@ doi = {10.1126/science.adk3451},
   year={1992},
   publisher={American Psychological Association}
 }
+@article{hauser2016attentive,
+  title={Attentive Turkers: MTurk participants perform better on online attention checks than do subject pool participants},
+  author={Hauser, David J and Schwarz, Norbert},
+  journal={Behavior research methods},
+  volume={48},
+  number={1},
+  pages={400--407},
+  year={2016},
+  publisher={Springer}
+}
+@article{berinsky2014separating,
+  title={Separating the shirkers from the workers? Making sure respondents pay attention on self-administered surveys},
+  author={Berinsky, Adam J and Margolis, Michele F and Sances, Michael W},
+  journal={American journal of political science},
+  volume={58},
+  number={3},
+  pages={739--753},
+  year={2014},
+  publisher={Wiley Online Library}
+}
