--- a/gk.bib
+++ b/gk.bib
@@ -31009,3 +31009,12 @@ doi = {10.1126/science.adk3451},
   year={2014},
   publisher={Wiley Online Library}
 }
+@article{berinsky2016can,
+  title={Can we turn shirkers into workers?},
+  author={Berinsky, Adam J and Margolis, Michele F and Sances, Michael W},
+  journal={Journal of Experimental Social Psychology},
+  volume={66},
+  pages={20--28},
+  year={2016},
+  publisher={Elsevier}
+}
