--- a/gk.bib
+++ b/gk.bib
@@ -31018,3 +31018,57 @@ doi = {10.1126/science.adk3451},
   year={2016},
   publisher={Elsevier}
 }
+@article{molloy2003overcoming,
+  title={Overcoming technical variation and biological variation in quantitative proteomics},
+  author={Molloy, Mark P and Brzezinski, Erin E and Hang, Junqi and McDowell, Michael T and VanBogelen, Ruth A},
+  journal={Proteomics},
+  volume={3},
+  number={10},
+  pages={1912--1919},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@article{bryant2011technical,
+  title={Technical variability is greater than biological variability in a microarray experiment but both are outweighed by changes induced by stimulation},
+  author={Bryant, Penelope A and Smyth, Gordon K and Robins-Browne, Roy and Curtis, Nigel},
+  journal={PloS one},
+  volume={6},
+  number={5},
+  pages={e19556},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+@article{triantafyllou2005comparison,
+  title={Comparison of physiological noise at 1.5 T, 3 T and 7 T and optimization of fMRI acquisition parameters},
+  author={Triantafyllou, Christina and Hoge, Richard D and Krueger, Gunnar and Wiggins, Christopher J and Potthast, Andreas and Wiggins, Graham C and Wald, Lawrence L},
+  journal={Neuroimage},
+  volume={26},
+  number={1},
+  pages={243--250},
+  year={2005},
+  publisher={Elsevier}
+}
+@article{brooks2013physiological,
+  title={Physiological noise in brainstem FMRI},
+  author={Brooks, Jonathan CW and Faull, Olivia K and Pattinson, Kyle TS and Jenkinson, Mark},
+  journal={Frontiers in human neuroscience},
+  volume={7},
+  pages={623},
+  year={2013},
+  publisher={Frontiers Media SA}
+}
+@article{rose2020particle,
+  title={Particle tracking of nanoparticles in soft matter},
+  author={Rose, Katie A and Molaei, Mehdi and Boyle, Michael J and Lee, Daeyeon and Crocker, John C and Composto, Russell J},
+  journal={Journal of Applied Physics},
+  volume={127},
+  number={19},
+  year={2020},
+  publisher={AIP Publishing}
+}
+@article{king2024inferring,
+  title={Inferring interaction potentials from stochastic particle trajectories},
+  author={King, Ella M and Engel, Megan C and Martin, Caroline and Sunol, Alp M and Zhu, Qian-Ze and Schoenholz, Sam S and Manoharan, Vinothan N and Brenner, Michael P},
+  journal={Physicial Review Research (arXiv preprint arXiv:2406.01522)},
+  year={2025}
+}
