--- a/gk.bib
+++ b/gk.bib
@@ -31072,3 +31072,13 @@ doi = {10.1126/science.adk3451},
   journal={Physicial Review Research (arXiv preprint arXiv:2406.01522)},
   year={2025}
 }
+@article{hajcak2017psychometrics,
+  title={Psychometrics and the neuroscience of individual differences: Internal consistency limits between-subjects effects.},
+  author={Hajcak, Greg and Meyer, Alexandria and Kotov, Roman},
+  journal={Journal of Abnormal Psychology},
+  volume={126},
+  number={6},
+  pages={823},
+  year={2017},
+  publisher={American Psychological Association}
+}
